Create file for Discord Game SDK (not used rn)

--- a/src/linerider.csproj
+++ b/src/linerider.csproj
@@ -40,6 +40,7 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Discord\DiscordActivityController.cs" />
     <Compile Include="DiscordGameSDK\ActivityManager.cs" />
     <Compile Include="DiscordGameSDK\Constants.cs" />
     <Compile Include="DiscordGameSDK\Core.cs" />
