Add Advanced Visualization Settings from Davo's build. Includes some residual logic about camera zoom that wasn't parsed out

--- a/src/linerider.csproj
+++ b/src/linerider.csproj
@@ -337,6 +337,10 @@
     <EmbeddedResource Include="Resources\shaders\simline.frag" />
     <EmbeddedResource Include="Resources\shaders\rider.vert" />
     <EmbeddedResource Include="Resources\shaders\rider.frag" />
+    <EmbeddedResource Include="Resources\shaders\floatgrid.frag" />
+    <EmbeddedResource Include="Resources\shaders\floatgrid.vert" />
+    <EmbeddedResource Include="Resources\shaders\simgrid.frag" />
+    <EmbeddedResource Include="Resources\shaders\simgrid.vert" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\app.manifest" />
