--- a/src/linerider.csproj
+++ b/src/linerider.csproj
@@ -371,5 +371,8 @@
       <Name>Gwen.Renderer.OpenTK</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\icons\beziertool.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
