Added Screen Capture
+ Screen capture, can be selected in settings->capture screens
* Fixed a minor bug where the hit test setting in track recording would conserve this setting after recording is completed

--- a/src/linerider.csproj
+++ b/src/linerider.csproj
@@ -192,6 +192,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="UI\Dialogs\ChangelogWindow.cs" />
+    <Compile Include="UI\Dialogs\ScreenshotWindow.cs" />
     <Compile Include="UI\Dialogs\GeneratorWindow.cs" />
     <Compile Include="UI\Dialogs\TriggerWindow.cs" />
     <Compile Include="UI\PlatformImpl.cs" />
