More explicitly define shared tool swatches (line, pencil, bezier), (eraser), (select), and thus separate eraser and select tool swatches

--- a/src/linerider.csproj
+++ b/src/linerider.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Tools\SelectTool.cs" />
     <Compile Include="Tools\LineSelection.cs" />
     <Compile Include="Tools\PencilTool.cs" />
+    <Compile Include="Tools\SharedSwatches.cs" />
     <Compile Include="Tools\Tool.cs" />
     <Compile Include="Tools\Swatch.cs" />
   </ItemGroup>
