--- a/src/packages.config
+++ b/src/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Mono.Cecil" version="0.11.4" targetFramework="net46" />
+  <package id="MonoMod" version="21.11.1.1" targetFramework="net46" />
+  <package id="MonoMod.RuntimeDetour" version="21.11.1.1" targetFramework="net46" />
+  <package id="MonoMod.RuntimeDetour.HookGen" version="21.11.1.1" targetFramework="net46" />
+  <package id="MonoMod.Utils" version="21.11.1.1" targetFramework="net46" />
   <package id="NVorbis" version="0.8.5.0" targetFramework="net46" />
   <package id="OpenTK" version="2.0.0" targetFramework="net46" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net46" />
